--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,27 +1,21 @@
-name: LMS Frontend
+name: Terraform Linting
 
 on:
-  push:
-    branches:
-      - "testtt"
+  pull_request: # Trigger on pull request events
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [15.x]
 
     steps:
-      - uses: actions/checkout@v1
-      - run: npm install
-      - run: CI='' npm run build
-      - uses: jakejarvis/s3-sync-action@master
+      - uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
         with:
-          args: --acl public-read --follow-symlinks --delete
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET}}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID}}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-          AWS_REGION: ${{ secrets.AWS_REGION}}
-          SOURCE_DIR: "build"
+          terraform_version: 1.3.x # Adjust if needed
+
+      - name: Run the Action
+        uses: devops-infra/action-tflint@v0.3
+        with:
+          dir_filter: "**/*.tf"
