--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
 
       # Run tflint command in each directory recursively
       - name: Run TFLint
-        run: tflint -f compact --recursive --force
+        run: tflint -f compact --recursive
 
   # lint:
   #   runs-on: ubuntu-latest
