--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,23 +4,31 @@ on:
   pull_request: # Trigger on pull request events
 
 jobs:
-  checks:
+  terraform:
+    name: Lint and Validate Terraform
     runs-on: ubuntu-latest
-    permissions:
-      checks: write
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
         with:
-          submodules: true
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version-file: "go.mod"
-      - name: Run linters
-        uses: golangci/golangci-lint-action@v6.0.1
-        with:
-          version: v1.58
+          terraform_version: 1.3.0
+
+      - name: Install tflint
+        run: |
+          curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Validate
+        run: terraform validate
+
+      - name: tflint
+        run: tflint
 
   # lint:
   #   runs-on: ubuntu-latest
